--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,10 +1,14 @@
 .header  {
-  font-family: monospace;
+  font-family: sans-serif;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 10px;
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 900;
   color: tomato;
   background: white;
@@ -14,10 +18,14 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  display: flex;
+  gap: 10px;
 }
 
 a {
-  font-size: 22px;
+  font-size: 20px;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
