--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,8 +5,39 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 15px;
+}
+
+.footer{
+  background-color: #eeeeee ;
+}
+.left-links, .right-links{
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  gap: 10px;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  flex: 1;
+  justify-content: center;
+}
 img {
   width: 600px;
 }
@@ -16,6 +47,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -24,3 +56,4 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
